--- a/.github/workflows/Immortalwrt.yml
+++ b/.github/workflows/Immortalwrt.yml
@@ -33,6 +33,7 @@ on:
         options:
           - 'x86_64'
           - 'aarch64'
+          - 'rax3000m'
       CPU_SELECTION:
         description: 'CPU优选,增加编译速度'
         required: true
